# Intro_Neuromorphic_HCI

./: .gitignore  README.md  pyproject.toml  setup.md
Intro_Neuromorphic_HCI/: cursor_data.py  experiment.py  experiments.json  main.py  program.py
actual_results/: results_2025-10-15_18_22_12.csv  results_2025-10-19_18_51_27.csv  results_2025-10-19_18_51_27_cursor.csv  results_2025-10-20_20_21_49.csv  results_2025-10-20_20_21_49_cursor.csv  results_control_2025-10-19_18_28_32.csv  results_control_2025-10-19_18_28_32_cursor.csv  results_control_2025-10-20_20_08_18.csv  results_control_2025-10-20_20_08_18_cursor.csv  results_control_2025-10-22_08_46_35.csv  results_control_2025-10-22_08_46_35_cursor.csv
results/: README.md  benchmark_results_2025-10-24_11_29_04.csv  benchmark_results_2025-10-24_11_29_04_cursor.csv  results_2025-10-16_10_12_03.csv  results_2025-10-24_11_03_35.csv  results_2025-10-24_11_03_35_cursor.csv
