[project]
name = "Intro_Neuromorphic_HCI"
version = "0.1.0"
description = "Project for the course Introduction to Neuromorphic Human Computer Interaction"
authors = [
    {name = "Jord",email = "jordcluitmans@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "libpointing @ file:///Users/jordc/Documents/Studie/Master/Introduction%20to%20Neuromorphic%20HCI/Intro_Neuromorphic_HCI/Intro_Neuromorphic_HCI/libpointing/bindings/Python/cython"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
libpointing = {develop = true}
